@@ -7,8 +7,12 @@ from PyQt5 import QtWidgets, QtCore, QtGui
 
 from refnx.reflect._app.view import MotofitMainWindow
 import refnx.dataset as refd
+from refnx.reflect._app.treeview_gui_model import (
+    ReflectModelNode,
+    StructureNode,
+)
 from refnx.reflect._app import resources_rc
-from refnx.reflect import Spline
+from refnx.reflect import Spline, Structure
 
 
 def mysetup(qtbot):
@@ -88,7 +92,14 @@ def test_add_spline_save(qtbot, tmpdir):
     # get index of theoretical dataset --> structure --> slab1
     data_object_node = model.data_object_node("theoretical")
     model_node = data_object_node.child(1)
-    structure_node = model_node.child(3)
+    assert isinstance(model_node, ReflectModelNode)
+
+    structs = model_node.structures
+    for struct in structs:
+        assert isinstance(struct, Structure)
+
+    structure_node = model_node.child(4)
+    assert isinstance(structure_node, StructureNode)
 
     # selection_model = myapp.ui.treeView.selectionModel()
     # slab_node = structure_node.child(1)
